--- a/dashboard/dashboard/templates/upload.html
+++ b/dashboard/dashboard/templates/upload.html
@@ -232,13 +232,13 @@
         <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="/dashboard">
+              <a class="nav-link d-flex align-items-center gap-2 " aria-current="page" href="/dashboard">
                 <svg class="bi"><use xlink:href="#house-fill"/></svg>
                 Dashboard
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2" href="/upload">
+              <a class="nav-link d-flex align-items-center gap-2 active" href="/upload">
                 <svg class="bi"><use xlink:href="#file-earmark"/></svg>
                 Data Upload
               </a>
@@ -253,24 +253,24 @@
         <h1 class="h2">Upload Data Set</h1>
 
       </div>
-      <form method = "POST" enctype="multipart/form-data" action="/upload">
+      <form method = "POST" enctype="multipart/form-data" action="/uploadFile">
            <div class="col-12">
               <div>
                   <label for="formFileLg" class="form-label">Select csv file you want to upload</label>
-                  <input class="form-control form-control-lg" id="dataSet" name ="dataSet" type="file">
+                  <input class="form-control form-control-lg" id="dataSet" required name ="dataSet" type="file">
               </div>
             </div>
 
           <div class="my-3">
-            <h4 class="mb-3">Insert Criteria</h4>
-            <div class="form-check">
-              <input id="insert" name="insertMethod" type="radio" class="form-check-input"  required>
-              <label class="form-check-label" for="append">Append</label>
-            </div>
-            <div class="form-check">
-              <input id="replace" name="insertMethod" type="radio" class="form-check-input" checked required>
-              <label class="form-check-label" for="replace">Replace</label>
-            </div>
+<!--            <h4 class="mb-3">Insert Criteria</h4>-->
+<!--            <div class="form-check">-->
+<!--              <input id="insert" name="insertMethod" type="radio" class="form-check-input"  required>-->
+<!--              <label class="form-check-label" for="append">Append</label>-->
+<!--            </div>-->
+<!--            <div class="form-check">-->
+<!--              <input id="replace" name="insertMethod" type="radio" class="form-check-input" checked required>-->
+<!--              <label class="form-check-label" for="replace">Replace</label>-->
+<!--            </div>-->
           </div>
           <button class="w-100 btn btn-primary btn-lg" type="submit">Upload</button>
         </form>
