--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -322,6 +322,21 @@
       </div>
     </div>
 
+      <div class="row row-cols-1 row-cols-md-12 mb-3 text-center">
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+<!--          <div class="card-header py-3 border-primary text-bg-primary">-->
+<!--            <h4 class="my-0 fw-normal">Top 10 Profitable item</h4>-->
+<!--          </div>-->
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Average price per item is {{ values.average_price_per_item}}</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
       <div class="row">
             <div class="col-6" >
               <div class="card mb-4 rounded-3 shadow-sm">
