--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -331,6 +331,8 @@
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
               <li>Average price per item is {{ values.average_price_per_item}}</li>
+              <li>{{ values.get_insights.insights1}}</li>
+              <li>{{ values.get_insights.insights2}}</li>
             </ul>
           </div>
         </div>
